--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -30,8 +30,10 @@ header.page-header
               footer.card-footer
                 .card-footer-actions
                   ul.card-footer-actions__items
-                    - if admin_login?
-                      li.card-footer-actions__item
+                    li.card-footer-actions__item
+                      - if current_user == @user || current_user.admin?
+                        = link_to "登録情報変更", edit_current_user_path, class: "card-footer-actions__action a-button is-md is-secondary is-block"
+                      - elsif admin_login?
                         = link_to "管理者として情報変更", edit_admin_user_path, class: "card-footer-actions__action a-button is-md is-secondary is-block"
         .col-xs-12.col-lg-7.col-xxl-6
           - unless @user.total_learning_time.zero?
