--- a/app/assets/stylesheets/mixins/_long-text-style.sass
+++ b/app/assets/stylesheets/mixins/_long-text-style.sass
@@ -24,7 +24,7 @@
   >*:last-child
     margin-bottom: 0
   h1
-    +text-block(1.875rem 1.3 0 .75em, 700 $main)
+    +text-block(1.875em 1.3 0 .75em, 700 $main)
     padding-bottom: .25em
     border-bottom: 3px solid mix($font, $background, 20%)
   h2
