全体のボタンのルールを修正

--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -27,7 +27,7 @@
     font-size: 1rem
   &:focus
     background-color: $base
-    box-shadow: rgba(black, .07) 0 .0625rem .0625rem inset
+    box-shadow: rgba(black, .07) 0 .0625rem .0625rem inset, rgba($primary, .4) 0 0 1px 2px
 
 .a-sm-text-input
   +text-block(.875rem 1.45, block)
@@ -45,7 +45,7 @@
   &:focus
     background-color: $base
     border-color: #c4c7bf
-    box-shadow: rgba(black, .1) 0 1px 2px inset
+    box-shadow: rgba(black, .1) 0 1px 2px inset, rgba($primary, .4) 0 0 1px 2px
 
 textarea.a-sm-text-input
   min-height: 6rem
@@ -76,7 +76,7 @@ textarea.a-sm-text-input
   &:focus
     background-color: $base
     border-color: #c4c7bf
-    box-shadow: rgba(black, .1) 0 1px 2px inset
+    box-shadow: rgba(black, .1) 0 1px 2px inset, rgba($primary, .4) 0 0 1px 2px
 
 .a-file-input
   label
