--- a/app/assets/stylesheets/blocks/thread/_thread.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread.sass
@@ -43,6 +43,6 @@ $thread-header-author: 6rem
 .thread__description
   padding: 1.25rem 2rem
   +media-breakpoint-down(sm)
-    padding: 1rem
+    padding: .75rem
   & + .thread__description
     border-top: solid 1px $background
