--- a/app/assets/stylesheets/mixins/_button.sass
+++ b/app/assets/stylesheets/mixins/_button.sass
@@ -15,6 +15,9 @@
   &.is-block
     display: flex
     width: 100%
+    +media-breakpoint-up(md)
+      max-width: 18rem
+      +margin(horizontal, auto)
   &:focus
     outline: none
   &:disabled
