--- a/app/views/announcements/edit.html.slim
+++ b/app/views/announcements/edit.html.slim
@@ -2,7 +2,7 @@
 
 .page-header
   .container
-    .page-header__container
+    .page-header__inner
       h1.page-header__title = title
 .container
   = render "form", announcement: @announcement
