--- a/app/views/announcements/index.html.slim
+++ b/app/views/announcements/index.html.slim
@@ -2,13 +2,14 @@
 
 header.page-header
   .container
-    .page-header__container
-      h2.page-header__title = title
+    .page-header__inner
+      h2.page-header__title
+        = title
       - if admin_login?
         .page-header-actions
           .page-header-actions__items
             .page-header-actions__item
-              = link_to new_announcement_path, class: "a-button is-md is-warning" do
+              = link_to new_announcement_path, class: "a-button is-md is-warning is-block" do
                 i.fa.fa-plus
                 | お知らせ作成
 
