--- a/app/views/answers/edit.html.slim
+++ b/app/views/answers/edit.html.slim
@@ -2,8 +2,9 @@
 
 header.page-header
   .container
-    .page-header__container
-      h2.page-header__title 解答編集
+    .page-header__inner
+      h2.page-header__title
+        | 解答編集
 
 .page-body
   .container
