--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,8 +1,10 @@
 - title "ダッシュボード"
 header.page-header
   .container
-    .page-header__container
-      h2.page-header__title = title
+    .page-header__inner
+      h2.page-header__title
+        = title
+      = render "reports/new_report"
 .page-body
   .container
     .columns
