--- a/app/views/pages/new.html.slim
+++ b/app/views/pages/new.html.slim
@@ -3,8 +3,9 @@
 
 header.page-header
   .container
-    .page-header__container
-      h1.page-header__title = title
+    .page-header__inner
+      h1.page-header__title
+        = title
 .page-body
   .container
     = render "form", page: @page
