--- a/app/views/products/new.html.slim
+++ b/app/views/products/new.html.slim
@@ -3,8 +3,9 @@
 
 header.page-header
   .container
-    .page-header__container
-      h2.page-header__title = title
+    .page-header__inner
+      h2.page-header__title
+        = title
 .page-body
   .container
     .practice-contents
