--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,12 +1,12 @@
 - title "質問一覧"
 header.page-header.is-margin-bottom-0
   .container
-    .page-header__container
+    .page-header__inner
       h2.page-header__title Q&A一覧
       .page-header-actions
         .page-header-actions__items
           .page-header-actions__item
-            = link_to new_question_path, class: "a-button is-md is-warning" do
+            = link_to new_question_path, class: "a-button is-md is-warning is-block" do
               i.fas.fa-plus
               | みんなに聞く
 
