--- a/app/views/reports/_new_report.html.slim
+++ b/app/views/reports/_new_report.html.slim
@@ -1,6 +1,6 @@
 .page-header-actions
   .page-header-actions__items
     .page-header-actions__item
-      = link_to new_report_path, class: "a-button is-md is-warning" do
+      = link_to new_report_path, class: "a-button is-md is-warning is-block" do
         i.fas.fa-plus
         | 日報作成
