--- a/app/assets/stylesheets/blocks/thread/_thread-header.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-header.sass
@@ -2,7 +2,7 @@
   padding: 1rem 2rem 0
   border-bottom: $background solid 1px
   +media-breakpoint-down(sm)
-    padding: 2.5rem 1rem 0
+    padding: 2.5rem .75rem 0
     .thread.is-page &
       padding-top: .75rem
 
@@ -11,7 +11,8 @@
   font-feature-settings: "palt"
   letter-spacing: .02em
   +media-breakpoint-down(sm)
-    font-size: 1.25rem
+    font-size: 1.125rem
+    word-break: break-all
   &.is-wip
     color: $muted-text
 
