--- a/app/views/courses/edit.html.slim
+++ b/app/views/courses/edit.html.slim
@@ -3,7 +3,8 @@
 
 .page-header
   .container
-    .page-header__container
-      h1.page-header__title = title
+    .page-header__inner
+      h1.page-header__title
+        = title
 .container
   = render "form", course: @course
