--- a/app/views/courses/index.html.slim
+++ b/app/views/courses/index.html.slim
@@ -1,13 +1,13 @@
 - title "コース"
 header.page-header
   .container
-    .page-header__container
+    .page-header__inner
       h2.page-header__title = title
       .page-header-actions
         ul.page-header-actions__items
           - if current_user && current_user.admin?
             li.page-header-actions__item
-              = link_to new_course_path, class: "a-button is-md is-warning" do
+              = link_to new_course_path, class: "a-button is-md is-warning is-block" do
                 i.fas.fa-plus
                 | 新規コース
 
