--- a/app/views/courses/new.html.slim
+++ b/app/views/courses/new.html.slim
@@ -3,7 +3,8 @@
 
 header.page-header
   .container
-    .page-header__container
-      h2.page-header__title = title
+    .page-header__inner
+      h2.page-header__title
+        = title
 .container
   = render "form", course: @course
