--- a/app/views/current_user/edit.html.slim
+++ b/app/views/current_user/edit.html.slim
@@ -1,5 +1,16 @@
 - title "登録情報変更"
-- content_for(:extra_body_classes, "no-header no-footer no-recent-reports")
+- content_for(:extra_body_classes, "no-footer no-recent-reports")
+
+header.page-header
+  .container
+    .page-header__inner
+      h1.page-header__title
+        = title
+      .page-header-actions
+        ul.page-header-actions__items
+          li.page-header-actions__item
+            = link_to root_path, class: "a-button is-md is-secondary is-block" do
+              | ダッシュボードに戻る
 
 .auth-form.is-sign-up.a-card.is-in-app
   header.auth-form__header
