--- a/app/views/practices/reports/index.html.slim
+++ b/app/views/practices/reports/index.html.slim
@@ -2,12 +2,13 @@
 
 header.page-header
   .container
-    .page-header__container
-      h2.page-header__title = title
+    .page-header__inner
+      h2.page-header__title
+        = title
       .page-header-actions
         ul.page-header-actions__items
           li.page-header-actions__item
-            = link_to practices_path, class: "a-button is-md is-secondary" do
+            = link_to practices_path, class: "a-button is-md is-secondary is-block" do
               i.fas.fa-angle-left
               | プラクティス
 
