--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -2,16 +2,17 @@
 
 header.page-header
   .container
-    .page-header__container
-      h1.page-header__title = title
+    .page-header__inner
+      h1.page-header__title
+        = title
       .page-header-actions
         ul.page-header-actions__items
           li.page-header-actions__item
-            = link_to @product.practice, class: "page-header-actions__items-link a-button is-md is-secondary" do
+            = link_to @product.practice, class: "a-button is-md is-secondary is-block" do
               | プラクティス
           - if current_user.admin?
             li.page-header-actions__item
-              = link_to products_unchecked_index_path, class: "page-header-actions__items-link a-button is-md is-secondary" do
+              = link_to products_unchecked_index_path, class: "a-button is-md is-secondary is-block" do
                 | 未チェック一覧
 .page-body
   .container
