--- a/app/views/questions/edit.html.slim
+++ b/app/views/questions/edit.html.slim
@@ -2,9 +2,10 @@
 
 header.page-header
   .container
-    .page-header__container
-      h2.page-header__title = title
-      = link_to questions_path, class: "a-button is-md is-secondary" do
+    .page-header__inner
+      h2.page-header__title
+        = title
+      = link_to questions_path, class: "a-button is-md is-secondary is-block" do
         i.fas.fa-angle-left
         | Q&A一覧へ
 .page-body
