--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,17 +1,17 @@
 - title @question.title
 header.page-header
   .container
-    .page-header__container
+    .page-header__inner
       h2.page-header__title
         | Q&A
       .page-header-actions
         ul.page-header-actions__items
           li.page-header-actions__item
-            = link_to new_question_path, class: "a-button is-md is-warning" do
+            = link_to new_question_path, class: "a-button is-md is-warning is-block" do
               i.fas.fa-plus
               | みんなに聞く
           li.page-header-actions__item
-            = link_to questions_path, class: "a-button is-md is-secondary" do
+            = link_to questions_path, class: "a-button is-md is-secondary is-block" do
               i.fas.fa-angle-left
               | Q&A一覧へ
 
