--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -2,8 +2,9 @@
 
 header.page-header.is-margin-bottom-0
   .container
-    .page-header__container
-      h2.page-header__title = title
+    .page-header__inner
+      h2.page-header__title
+        = title
       = render "reports/new_report"
 
 .page-tools
