--- a/app/views/reports/new.html.slim
+++ b/app/views/reports/new.html.slim
@@ -2,12 +2,13 @@
 - content_for(:extra_body_classes, "no-recent-reports")
 header.page-header
   .container
-    .page-header__container
-      h2.page-header__title = title
+    .page-header__inner
+      h2.page-header__title
+        = title
       .page-header-actions
         .page-header-actions__items
           .page-header-actions__item
-            = link_to reports_path, class: "a-button is-md is-secondary" do
+            = link_to reports_path, class: "a-button is-md is-secondary is-block" do
               i.fas.fa-angle-left
               | 日報一覧へ
 
