--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -2,17 +2,17 @@
 
 header.page-header
   .container
-    .page-header__container
+    .page-header__inner
       .page-header__title
         | #{l @report.reported_on} の日報
       .page-header-actions
         ul.page-header-actions__items
           li.page-header-actions__item
-            = link_to new_report_path, class: "page-header-actions__items-link a-button is-md is-warning" do
+            = link_to new_report_path, class: "a-button is-md is-warning is-block" do
               i.fas.fa-plus
               | 日報作成
           li.page-header-actions__item
-            = link_to reports_path, class: "page-header-actions__items-link a-button is-md is-secondary" do
+            = link_to reports_path, class: "a-button is-md is-secondary is-block" do
               | 日報一覧へ
 
 .page-body
