--- a/app/views/users/products/index.html.slim
+++ b/app/views/users/products/index.html.slim
@@ -1,12 +1,13 @@
 - title "#{@user.login_name}の提出物"
 header.page-header
   .container
-    .page-header__container
-      h2.page-header__title = title
+    .page-header__inner
+      h2.page-header__title
+        = title
       .page-header-actions
         ul.page-header-actions__items
           li.page-header-actions__item
-            = link_to "ユーザー一覧", users_path, class: "a-button is-md is-secondary"
+            = link_to "ユーザー一覧", users_path, class: "a-button is-md is-secondary is-block"
 
 .page-tools
   = render "page_tabs", resource: @user
