--- a/app/assets/stylesheets/shared/_test.sass
+++ b/app/assets/stylesheets/shared/_test.sass
@@ -2,9 +2,9 @@ html body.is-test
   .wrapper
     height: auto
   .test-fixed-top
-    +position(fixed, right 10rem, top 0)
+    +position(fixed, right 10rem, top 10rem)
   .test-fixed-bottom
-    +position(fixed, right 10rem, bottom 0)
+    +position(fixed, right 10rem, bottom 10rem)
   .test-inline-block
     display: inline-block
   .test-block
