--- a/app/assets/stylesheets/variables/_colors.sass
+++ b/app/assets/stylesheets/variables/_colors.sass
@@ -3,6 +3,7 @@ $accent: #ffbe0a
 $base: white
 $background: #e6e6e6
 $background-shade: #cbcbcb
+$background-tint: #eceeef
 
 $default-text: #35343c
 $welcome-default-text: #5a5f60
