--- a/app/views/admin/users/_table.html.slim
+++ b/app/views/admin/users/_table.html.slim
@@ -1,4 +1,4 @@
-.admin-table
+.admin-table(class="#{params[:target] == "all" ? "is-all-user" : ""}")
   table.admin-table__table
     thead.admin-table__header
       tr.admin-table__labels
