リスト内のcodeの調整

--- a/app/assets/stylesheets/mixins/_long-text-style.sass
+++ b/app/assets/stylesheets/mixins/_long-text-style.sass
@@ -97,6 +97,8 @@
       background-color: mix($font, $background, 4%)
       +margin(horizontal, .25rem)
       border-radius: .125rem
+    pre code
+      +margin(vertical, 1em)
   hr
     display: block
     height: 2px
