--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -43,14 +43,15 @@ header.page-header
           =  @product.practice.goal
         .thread__description.js-target-blank.is-long-text.js-markdown-view
           =  @product.body
-        - if @product.user == current_user
+        - if @product.user == current_user || admin_login?
           .card-footer
             .card-footer-actions
               ul.card-footer-actions__items
                 li.card-footer-actions__item
-                  = link_to edit_product_path(@product), class: "card-footer-actions_action a-button is-md is-primary is-block" do
-                    i.fas.fa-pen
-                    | 内容修正
+                  - if @product.user == current_user
+                    = link_to edit_product_path(@product), class: "card-footer-actions_action a-button is-md is-primary is-block" do
+                      i.fas.fa-pen
+                      | 内容修正
                 li.card-footer-actions__item
                   = link_to @product, data: { confirm: "本当によろしいですか？" }, method: :delete, class: "card-footer-actions__action a-button is-md is-danger is-block" do
                     i.fas.fa-trash-alt
@@ -68,7 +69,6 @@ header.page-header
                 - else
                   = form_for @product.checks.last, url: check_path(@product.checks.last), method: :delete, class: "thread-check-form" do |f|
                     = f.submit "提出物の確認を取り消す", class: "thread-check-form__action is-text"
-                = link_to "提出物を削除する", product_path(@product), method: :delete, data: { confirm: "本当によろしいですか？" }
 
       .thread-prev-next
         .thread-prev-next__item
