--- a/app/assets/stylesheets/variables/_colors.sass
+++ b/app/assets/stylesheets/variables/_colors.sass
@@ -4,6 +4,7 @@ $base: white
 $background: #e6e6e6
 $background-shade: #cbcbcb
 $background-tint: #eceeef
+$background-more-tint: #f7f7f9
 
 $default-text: #35343c
 $welcome-default-text: #5a5f60
