--- a/app/views/users/practices/_active_practices.html.slim
+++ b/app/views/users/practices/_active_practices.html.slim
@@ -6,4 +6,6 @@
     ul.card-list__items
       - user.active_practices.each do |practice|
         li.card-list__item
-          = link_to practice.title, practice, class: "card-list__item-link"
+          = link_to practice, class: "card-list__item-link" do
+            .card-list__item-link-inner
+              = practice.title
