完了プラクティス一覧にスクロールを追加

--- a/app/assets/stylesheets/blocks/card/_card-list.sass
+++ b/app/assets/stylesheets/blocks/card/_card-list.sass
@@ -1,3 +1,9 @@
+.card-list
+  &.is-completed
+    max-height: 25rem
+    overflow-y: auto
+    -webkit-overflow-scrolling: touch
+
 .card-list__items
   margin-bottom: -.25rem
 
