個別ページが見れない問題を修正

--- a/app/views/users/practices/_completed_practices_list.html.slim
+++ b/app/views/users/practices/_completed_practices_list.html.slim
@@ -8,4 +8,4 @@
             .card-list__item-link-date
               .card-list__item-link-date-label
                 | 完了日
-              = l practice.learning(current_user).updated_at.to_date
+              = l practice.learning(user).updated_at.to_date
