--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -25,6 +25,8 @@ header.page-header
       header.practice-contents__header
         h1.practice-contents__title
           = @practice.title
+      - if @practice.open_product?
+          p このプラクティスは、OKをもらっていなくても他の人の提出物を閲覧できます。
       section.practice-content.a-card
         header.practice-content__header.card-header
           h2.practice-content__title
