--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -14,6 +14,10 @@
           .form-item
             = f.label :reported_on, class: "a-label"
             = f.text_field :reported_on, class: "datepicker a-text-input"
+          .form-item
+            = f.label :emoticon, class: "a-label"
+            .select-emoticons
+              = f.select(:emoticon, Report.faces.invert, prompt: "選択してください")
 
           #tasks
             = f.fields_for :learning_times do |learning_time|
