--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -27,7 +27,7 @@ nav.global-nav
               .global-nav__item-count.a-notification-count
                 = Report.unchecked.not_wip.count
             .global-nav-links__link-label 日報
-        - if admin_adviser_or_mentor_login?
+        - if staff_login?
           li.global-nav-links__item
             = link_to products_path, class: "global-nav-links__link #{current_link /^products-index/}" do
               .global-nav-links__link-icon
