--- a/app/views/welcome/_finding_employment.slim
+++ b/app/views/welcome/_finding_employment.slim
@@ -10,4 +10,4 @@ section.welcome-section.is-finding-employment.is-yellow#finding-employment
         | 就職する就職先企業に学費を支払ってもらうという方法でこのサービスを運営しているので、就職時に学費を支払う契約を弊社と交わした企業であることが条件になりますが、
         | 学費を支払える条件だけでなく、プログラマーに理解があり、今後もプログラミングを好きでい続けられる会社を紹介します。
 
-= render "company_logos"
+= render "welcome/company_logos"
