emoticonをemotionに書き換えた

--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -15,9 +15,9 @@
             = f.label :reported_on, class: "a-label"
             = f.text_field :reported_on, class: "datepicker a-text-input"
           .form-item
-            = f.label :emoticon, class: "a-label"
-            .select-emoticons
-              = f.select(:emoticon, Report.faces.invert, prompt: "選択してください")
+            = f.label :emotion, class: "a-label"
+            .select-emotions
+              = f.select(:emotion, Report.faces.invert, prompt: "選択してください")
 
           #tasks
             = f.fields_for :learning_times do |learning_time|
