Revert "Merge branch 'master' into issue#860"
This reverts commit ad6bf74eebf84b82e403447248118998195fe437, reversing
changes made to 46c5c75fee6977a362b14825b7369c19d4cf935e.

--- a/app/views/application/_page_tabs.html.slim
+++ b/app/views/application/_page_tabs.html.slim
@@ -4,8 +4,10 @@
       - page_tab_members(resource).each do |tab|
         - if tab[:is_products_tab]
           - if resource.is_a?(User)
-            = render "page_tab", tab: tab
+            - if product_displayable?(user: resource)
+              = render "page_tab", tab: tab
           - elsif resource.is_a?(Practice)
-            = render "page_tab", tab: tab
+            - if product_displayable?(practice: resource)
+              = render "page_tab", tab: tab
         - else
           = render "page_tab", tab: tab
