--- a/app/views/users/products/index.html.slim
+++ b/app/views/users/products/index.html.slim
@@ -14,5 +14,6 @@ header.page-header
 
 .page-body
   .container
-    .thread-list.a-card
-      = render partial: "products/product", collection: @products, as: :product
+    - if product_displayable?(user: @user)
+      .thread-list.a-card
+        = render partial: "products/product", collection: @products, as: :product
