--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -32,7 +32,7 @@ header.page-header
                 .card-footer-actions
                   ul.card-footer-actions__items
                     li.card-footer-actions__item
-                      - if current_user == @user
+                      - if current_user == @user || current_user.admin?
                         = link_to "登録情報変更", edit_current_user_path, class: "card-footer-actions__action a-button is-md is-secondary is-block"
                       - elsif admin_login?
                         = link_to "管理者として情報変更", edit_admin_user_path, class: "card-footer-actions__action a-button is-md is-secondary is-block"
