Revert "Merge branch 'master' into issue#860"
This reverts commit ad6bf74eebf84b82e403447248118998195fe437, reversing
changes made to 46c5c75fee6977a362b14825b7369c19d4cf935e.

--- a/app/views/practices/products/index.html.slim
+++ b/app/views/practices/products/index.html.slim
@@ -16,5 +16,6 @@ header.page-header
 
 .page-body
   .container
-    .thread-list.a-card
-      = render partial: "products/product", collection: @products, as: :product
+    - if product_displayable?(practice: @practice)
+      .thread-list.a-card
+        = render partial: "products/product", collection: @products, as: :product
