--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -41,7 +41,7 @@ header.page-header
           =  @product.practice.goal
         .thread__description.js-target-blank.is-long-text.js-markdown-view
           =  @product.body
-
+        = render "reactions/reactions", reactionable: @product
         - if @product.user == current_user || admin_login?
           .card-footer
             .card-footer-actions
