--- a/app/views/welcome/_welcome_header.html.slim
+++ b/app/views/welcome/_welcome_header.html.slim
@@ -7,7 +7,7 @@ header.welcome-header
       nav.welcome-header-nav
         ul.welcome-header-nav__items
           li.welcome-header-nav__item
-            = link_to course_practices_path(current_user.course), class: "welcome-header-nav__item-link is-active" do
+            = link_to "", class: "welcome-header-nav__item-link is-active" do
               | 学習内容
           li.welcome-header-nav__item
             = link_to pricing_path, class: "welcome-header-nav__item-link" do
