新規登録を再会

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -9,7 +9,9 @@
       = f.text_field :login_name, class: "a-sm-text-input", autocomplete: :nope, placeholder: "komagata"
       .a-form-help
         p
-          | チャットやSNS（Twitter、GitHub、ブログ など）でユーザー名が異なると個人を認識するのが困難になります。極力ユーザー名は統一するようにしてください。サービスによっては半角英数しか使えないサービスが多いので、半角英数をおすすめします。
+          | チャットやSNS（Twitter、GitHub、ブログ など）でユーザー名が異なると個人を認識するのが困難になります。
+          | 極力ユーザー名は統一するのがおすすめです。
+          | サービスによっては半角英数しか使えないサービスが多いので、半角英数をおすすめします。
 
     .auth-form-item
       // メールアドレス
@@ -18,7 +20,9 @@
       - unless user.adviser?
         .a-form-help
           p
-            | このメールアドレスは卒業後の連絡にも使うので、会社で提供されたなどの第三者によって提供されたメールアドレスではなく、転職後も使い続ける自分自身で取得したメールアドレスで登録してください。
+            | このメールアドレスは卒業後の連絡にも使うので、
+            | 会社で提供されたなどの第三者によって提供されたメールアドレスではなく、
+            | 転職後も使い続ける自分自身で取得したメールアドレスで登録してください。
 
     .auth-form-item
       // 名前
@@ -34,7 +38,8 @@
       - unless user.adviser?
         .a-form-help
           p
-            | 就職希望先企業の採用担当者も使う情報になるので、姓・名は必ず本名を（漢字がある場合は漢字で）入力してください。
+            | 就職希望先企業の採用担当者も使う情報になるので、
+            | 姓・名は必ず本名を（漢字がある場合は漢字で）入力してください。
 
     .auth-form-item
       = f.label :avatar, class: "a-sm-label is-required"
@@ -73,8 +78,6 @@
       .auth-form-item
         // 現在の所属組織
         = f.label :organization, class: "a-sm-label is-required"
-        ul
-          li
 
         = f.text_field :organization, class: "a-sm-text-input", autocomplete: :off, placeholder: "XXX大学XXX学部XXX学科XXX専攻"
         - unless user.adviser?
@@ -93,7 +96,8 @@
             | Mac向けのカリキュラムのみなのでWindowsでは受講できません。
             | Macを持ってない方は用意する必要があります。
             | Linux経験者であればLinuxで学習を行っても構いません。
-            | 参加登録後にMacを購入する予定の場合は、メンターにどの機種を購入するべきかを相談をした上で購入することをおすすめします。
+            | 参加登録後にMacを購入する予定の場合は、
+            | メンターにどの機種を購入するべきかを相談をした上で購入することをおすすめします。
 
       .auth-form-item
         // 主な学習場所
@@ -107,8 +111,10 @@
             | 環境が整っており、気軽にメンターに質問できます。
             | オフィスに通って勉強される方の方が卒業率は高くなります。
           p
-            | ここで自宅を選択したからと言って、オフィスの利用ができなくなる、ということはありません。
-            | 普段は自宅で学習をしていても、用があってオフィスの近くに来たときや。夏休みや正月休みなどの長期休暇の間はオフィスを利用することなども可能です。また、主な学習場所をあとで変更することもできます。
+            | ここで自宅を選択したからと言ってオフィスの利用ができなくなるということはありません。
+            | 普段は自宅で学習をしていても用があってオフィスの近くに来たときや。
+            | 夏休みや正月休みなどの長期休暇の間はオフィスを利用することなども可能です。
+            | また、主な学習場所をあとで変更することもできます。
 
       .auth-form-item
         // プログラミング経験
@@ -122,7 +128,10 @@
         = f.label :how_did_you_know, "フィヨルドブートキャンプをどこで知りましたか？", class: "a-sm-label is-required"
         = f.text_area :how_did_you_know, class: "a-sm-text-input", placeholder: "大学時代の先輩である株式会社XXXXでプログラマをやっているXXXXさんから勧められて。"
         .a-form-help
-          p 自分で検索エンジンを使って見つけた場合は、そのときの検索キーワードなども覚えていたら入力してください。誰かに紹介してもらった場合、その誰かもお教えください。
+          p
+            | 自分で検索エンジンを使って見つけた場合は、
+            | そのときの検索キーワードなども覚えていたら入力してください。
+            | 誰かに紹介してもらった場合、その誰かもお教えください。
           p この情報は他のフィヨルドブートキャンプ参加者には公開されません。
 
     .auth-form-item
