静的ページデザイン更新

--- a/app/views/welcome/_about.slim
+++ b/app/views/welcome/_about.slim
@@ -41,7 +41,7 @@ section.welcome-section.is-about.is-yellow#about
             .welcome-small-section__inner
               = image_tag("book.svg", class: "welcome-small-section__icon")
               h3.welcome-small-section__title
-                | 就活で有利になる<br>成果物
+                | 就活に使える<br>成果物
               .welcome-small-section__description
                 p
                   | カリキュラムの中で書籍が必要なものがあります。書籍代として、大体1万5000円くらいの費用がかかります。
