--- a/app/views/welcome/pricing.html.slim
+++ b/app/views/welcome/pricing.html.slim
@@ -5,5 +5,6 @@
     h1.welcome-page-header__title
       = image_tag("pricing-page-title", class: "welcome-page-header__title-image")
 
-.container
-  | どんな小さな羽さえもそよがぬ 弱い息のお話をせがむとは！でもこの哀れな声一つ三つあわせた舌に逆らえましょうか？居丈だかなプリマがまずは唱えるその宣告は「おはじめなさい」すこし優しげに二番手の希望
+section.welcome-section
+  .container
+    | どんな小さな羽さえもそよがぬ 弱い息のお話をせがむとは！でもこの哀れな声一つ三つあわせた舌に逆らえましょうか？居丈だかなプリマがまずは唱えるその宣告は「おはじめなさい」すこし優しげに二番手の希望
