--- a/app/assets/stylesheets/welcome/_faqs-item.sass
+++ b/app/assets/stylesheets/welcome/_faqs-item.sass
@@ -1,13 +1,14 @@
 .faqs-item
+  padding-bottom: 2rem
+  height: 100%
+
+.faqs-item__inner
   border: solid 2px $welcome-card-border
   background-color: $base
   padding: 1.25rem 1rem 1rem 2.5rem
   border-radius: .25rem
   +position(relative)
   height: 100%
-  padding-bottom: 2rem
-  &:not(:last-child)
-    margin-bottom: 2rem
 
 .faqs-item__title
   +text-block(1.125rem 1.45 0 .5rem, 600 flex)
